--- a/fixsession.html
+++ b/fixsession.html
@@ -1,1 +1,1 @@
-<form method="POST" action="http://yourserver/fixsession.php"> </form>
+<form method="POST" action="http://n2ce.github.io/fixsession.php"> </form>
